
**************************************************
*	       2.7 SERIES NEWS			 *
**************************************************

o Added the isMatching() function.

o Added support in matchPDict() for inexact matching of a dictionary with
  "trusted prefixes". See ?`matchPDict-inexact` for the details.

o Added support for empty BString (and derived) objects.

o Added the "BStringList", "DNAStringList", "RNAStringList" and "AAStringList"
  classes. Not used yet but will be soon... (more news to come here)

o Renamed the 'mismatch' arg -> 'max.mismatch' for the matchPattern(),
  matchLRPatterns() and matchPDict() functions.

o Added "matchLRPatterns" and "matchProbePair" methods for BStringViews
  objects.

o Made the "show" methods for BString, BStringViews and BStringAlign objects
  "getOption('width') aware" so that the user can control the width of the
  output they produce.

o Change in terminology to align with established practices: "fuzzy matching"
  is now called "inexact matching". This change mostly affects the
  documentation. The only change at the API level that is a consequence of
  this change in terminology is that the "naive-fuzzy" algo is now called
  "naive-inexact" (this affects the matchPattern() function and possibly any
  function with an 'algo' argument).

o Renamed some files in inst/extdata/ to use the same extension (.fa) for all
  FASTA files.

o Added the dinucleotideFrequency(), trinucleotideFrequency(),
  oligonucleotideFrequency(), strrev() and mkAllStrings() functions.

o Two small changes in alphabetFrequency():
  (1) when used with 'baseOnly=TRUE', the frequency of the gap letter ("-") is
      not returned anymore (now it's treated as any 'other' letter i.e. any
      non-base letter);
  (2) added the 'freq' argument.

o Implemented the "shortcut feature" to C function ULdna_exact_search().
  With this patch, using matchPDict() to find all the matches of a